# tech-professional-coacher

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  README.md  otel-config.yaml  pyproject.toml
.github/actions/deploy/: action.yml
.github/actions/install-dependencies/: action.yml
.github/actions/set-version/: action.yml
.github/workflows/: build-deploy.yml
kubernetes/: README.md
kubernetes/dev/: deployment.yaml  ingress-route.yaml  middleware.yaml  secret.yaml  service.yaml
kubernetes/homolog/: deployment.yaml  ingress-route.yaml  service.yaml
kubernetes/production/: ingress-route.yaml  user_secrets.yaml
tech_professional_coacher/api/: app.py
tech_professional_coacher/api/routes/: client.py  health.py  index.py
tech_professional_coacher/models/: api.py  errors.py
tech_professional_coacher/services/: authetication.py
tech_professional_coacher/utils/config/: settings.py
tech_professional_coacher/utils/logs/: log.py
tech_professional_coacher/utils/metrics/: metric.py
tech_professional_coacher/utils/tools/: agents.py  resources.py
tech_professional_coacher/utils/traces/: tracer.py
